GH-1 add hadolint config file

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,6 +18,8 @@ jobs:
          node-version: 16
      - name: React tests
        run: |
+         mv cypress.ci.json cypress.json
          yarn install
+         yarn dev
          yarn cypress:headless
        working-directory: .
